# os-tools

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml  release-template.md
.github/workflows/: ci.yml  publish.yml  release.yml
crates/os-truststore/: Cargo.toml  README.md
crates/os-truststore/src/: cert.rs  darwin.rs  detect.rs  error.rs  inprocess.rs  lib.rs  linux.rs  windows.rs
crates/os-truststore/tests/: public_api.rs  roundtrip.rs
docs/: PRIOR-ART.md
docs/adr/: 0001-os-truststore-orchestrator.md
