[workspace]
resolver = "2"
members = ["crates/os-truststore"]

[workspace.package]
version = "0.0.1"
authors = ["Sylin.org <hello@sylin.org>"]
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/sylin-org/os-tools"
homepage = "https://github.com/sylin-org/os-tools"

# Shared external dependencies — single version pin across the family.
[workspace.dependencies]
tracing = "0.1"
thiserror = "2"
pem = "3"
x509-parser = "0.16"
sha2 = "0.10"
rcgen = "0.13"
# Platform / feature-gated (used per-target or behind a feature in member crates).
libc = "0.2"
which = "6"
schannel = "0.1"
tempfile = "3"
# default-features off: RootCertStore + pki_types need no crypto provider, so a consumer
# enabling the `rustls` feature does not inherit aws-lc-rs's C/cmake build dependency.
rustls = { version = "0.23", default-features = false }
